update for git repo clone

--- a/django.conf
+++ b/django.conf
@@ -1,8 +1,8 @@
-WSGIScriptAlias / /var/www/Django/webshop/webshop/wsgi.py
-WSGIPythonHome /var/www/Django/env
-WSGIPythonPath /var/www/Django/webshop
+WSGIScriptAlias / /var/www/Django_wsgi/webshop/webshop/wsgi.py
+WSGIPythonHome /var/www/Django_wsgienv
+WSGIPythonPath /var/www/Django_wsgi/webshop
 
-<Directory /var/www/Django/webshop/webshop>
+<Directory /var/www/Django_wsgi/webshop/webshop>
     <Files wsgi.py>
        Allow from all
        Order deny,allow 
