enable mod_wsgi to authenticate

--- a/django.conf
+++ b/django.conf
@@ -2,6 +2,8 @@ WSGIScriptAlias / /var/www/Django_wsgi/webshop/webshop/wsgi.py
 WSGIPythonHome /var/www/Django_wsgienv
 WSGIPythonPath /var/www/Django_wsgi/webshop
 
+WSGIPassAuthorization On
+
 <Directory /var/www/Django_wsgi/webshop/webshop>
     <Files wsgi.py>
        Allow from all
