changes to config files

--- a/django.conf
+++ b/django.conf
@@ -1,5 +1,5 @@
 WSGIScriptAlias / /var/www/Django_wsgi/webshop/webshop/wsgi.py
-WSGIPythonHome /var/www/Django_wsgienv
+WSGIPythonHome /var/www/Django/env
 WSGIPythonPath /var/www/Django_wsgi/webshop
 
 WSGIPassAuthorization On
